--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#" target="_black" class="link-btn">hire me</a>
          </div>
          <div class="hw">
-            <img src="/images/html.png" alt="">
+            <img src="images/html.png" alt="">
          </div>
       </div>
    </section>
@@ -34,7 +34,7 @@
    <section id="dream-section">
       <div class="container plr-80">
          <div class="hw">
-            <img src="/images/css.png" alt="">
+            <img src="images/css.png" alt="">
          </div>
          <div class="hw">
             <h1>Dream Big <span class="title-color">Work Hard</span></h1>
